<resources>
    <string name="app_name">Children Chat</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">793600611036189</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb793600611036189</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">QsKCQkWknKdDUWfYqpTkpe6Vr</string>
    <string name="twitter_consumer_secret" translatable="false">O1OTvnZWuP2YsOCIb9HWMBNDpGCYaTT4peq7hGPmqIixkfjhoJ</string>

    <!-- Global -->
    <string name="global_accept">Aceptar</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_error_wifi_title">Error en conexion</string>
    <string name="global_error_wifi_message">Parece que tenemos problemas con tu red, verifica tu conexion</string>

    <!-- Characters -->
    <string name="global_curp_characters">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- XML -->
    <!-- Activities -->
    <string name="activity_main_enter">Ingresar</string>

    <string name="signup_activity_hint_username">Nombre de usuario</string>
    <string name="signup_activity_hint_curp">CURP</string>
    <string name="signup_activity_hint_birthday">Fecha de cumpleaños</string>
    <string name="signup_activity_hint_age">Edad</string>
    <string name="signup_activity_hint_man">Hombre</string>
    <string name="signup_activity_hint_woman">Mujer</string>
    <string name="signup_activity_button_signup">Registrarse</string>
    <string name="signup_activity_message">Estas a un paso de terminar tu registro, solo añade tu CURP, nosotros nos encargaremos del resto!</string>

    <string name="activity_add_child_hint_nombrehijo">Nombre del niño</string>
    <string name="activity_add_child_hint_curp">CURP del niño</string>
    <string name="activity_add_child_hint_email">Email para niño</string>
    <string name="activity_add_child_hint_password">Contraseña</string>
    <string name="activity_add_child_hint_passwordconfirm">Confirma contraseña</string>
    <string name="activity_add_child_button_registrar">Registrar</string>

    <string name="activity_childs_emptychilds">Aun no tienes hijos registrados</string>

    <!-- Menus -->
    <string name="menu_selectphoto_camera">Camara</string>
    <string name="menu_selectphoto_gallery">Galeria</string>

    <string name="menu_searchfather_search_titulo">Buscar</string>

    <string name="menu_navigationfather_contactos_titulo">Contactos</string>
    <string name="menu_navigationfather_mishijos_titulo">Mis hijos</string>
    <string name="menu_navigationfather_solicitudes_titulo">Solicitudes</string>
    <string name="menu_navigationfather_ajustes_titulo">Ajustes</string>
    <string name="menu_navigationfather_cerrarsesion_titulo">Cerrar sesion</string>

    <!-- Java -->
    <!-- Activities -->
    <string name="mainactivity_errorlogin_title">Error al iniciar sesion</string>
    <string name="mainactivity_errorlogin_message">Ops! parece que ocurrio un error al iniciar sesion, verifica tu conexion de internet</string>


    <string name="signupactivity_errorcurp_title">Error al obtener informacion</string>
    <string name="signupactivity_errorcurp_message">Ops! parece que ocurrio un error al obtener tu informacion, intenta mas tarde</string>
    <string name="signupactivity_successcurp_title">Datos obtenidos exitosamente</string>
    <string name="signupactivity_successcurp_message">Tus datos se han obtenido exitosamente, ahora puedes completar el proceso de registro</string>
    <string name="signupactivity_error_lengthcurp">El tamaño del CURP no es el adecuado</string>
    <string name="signupactivity_error_invalidcurp">Ingresa un CURP valido para obtener tus datos</string>
    <string name="signupactivity_preguntarporimagen_titulo">No has seleccionado una imagen</string>
    <string name="signupactivity_preguntarporimagen_mensaje">No seleccionaste una imagen de perfil, ¿Deseas seleccionarla ahora o despues?</string>
    <string name="signupactivity_preguntarporimagen_buttonpositive">Ahora</string>
    <string name="signupactivity_preguntarporimagen_buttonnegative">Despues</string>
    <string name="signupactivity_error_menoredad_titulo">Registro bloqueado</string>
    <string name="signupactivity_error_menoredad_mensaje">El registro esta bloqueado para menores de edad</string>

    <string name="addchildactivity_error_mayoredad_mensaje">El registro de hijos esta bloqueado para mayores de edad</string>
    <string name="addchildactivity_error_empty">Este campo es requerido</string>
    <string name="addchildactivity_error_invalidemail">Email no valido</string>
    <string name="addchildactivity_error_password">Las contraseñas no coinciden</string>
    <string name="addchildactivity_error_passwordlength">La contraseña minimo tiene que tener 6 caracteres</string>
    <string name="addchildactivity_error_registro_titulo">Error al registrar menor de edad</string>
    <string name="addchildactivity_error_registro_mensaje">El correo ingresado para el menor de edad ya esta siendo ocupado por otro usuario, intenta con otro diferente</string>

    <!-- Editar Childs -->
    <string name="activity_edit_child_button_actualizar_foto">Actualizar foto</string>
    <string name="activity_edit_child_button_recovery_password">Recuperar contraseña</string>
    <string name="activity_add_child_hint_actual_password">Contraseña actual</string>
</resources>
